@@ -22,6 +22,7 @@
 #
 
 CLEANFILES = \
+	parts.texi \
 	version.texi \
 	stamp-vti
 
@@ -31,7 +32,7 @@ all-local: info html ps pdf
 
 html: avrdude-html/avrdude.html
 
-avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS)
+avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS) $(srcdir)/parts.texi
 	texi2html -split_node $(srcdir)/$(info_TEXINFOS)
 	if [ -e ./avrdude.html -o -e ./avrdude_1.html ]; then \
 	 mkdir -p avrdude-html ; \
@@ -39,6 +40,16 @@ avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS)
 	else \
 	 mv -f avrdude avrdude-html; \
 	fi;
+
+avrdude.info: parts.texi
+avrdude.dvi: parts.texi
+avrdude.pdf: parts.texi
+
+parts.texi: ../avrdude$(EXEEXT) ../avrdude.conf parts_comments.txt Makefile
+	../avrdude$(EXEEXT) -C ../avrdude.conf -p \? 2>&1 \
+	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,$$3)}' \
+	| sed -e "`sed 's:\([^ \t]*\)[ \t]*\(.*\):s/\1$$/\1 \2/g:g' <parts_comments.txt`" \
+	>parts.texi
 
 clean-local:
 	rm -rf avrdude-html *.info
